Rename hello_service -> example

--- a/example/Dockerfile
+++ b/example/Dockerfile
@@ -2,11 +2,12 @@ FROM python:3.7
 RUN pip install --upgrade setuptools pip
 
 ENV PYTHONUNBUFFERED 1
+ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONPATH=/code
 ENV LC_ALL=C.UTF-8
 ENV LANG=C.UTF-8
 
-ENV FLASK_APP hello_service/hello_service.py
+ENV FLASK_APP example/example.py
 ENV FLASK_DEBUG 1
 ENV FLASK_ENV development
 
